fix: wrap variables in root

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,31 +22,34 @@
   font-style: normal;
 }
 
-/*Header colors*/
+:root {
+  /*Header colors*/
 
-$header-bg-color: #ffffff;
-$navigation-text-color: #241e20;
-$language-button-text-color: #000000;
-$logo-text-color: #241e20;
+  --header-bg-color: #ffffff;
+  --navigation-text-color: #241e20;
+  --language-button-text-color: #000000;
+  --logo-text-color: #241e20;
 
-/*Main*/
-$main-page-primary-header-text-color: #fffefe;
-$main-page-secondary-header-text-color: #000000;
-$main-bg-color: #ffffff;
+  /*Main*/
+  --main-page-primary-header-text-color: #fffefe;
+  --main-page-secondary-header-text-color: #000000;
+  --main-bg-color: #ffffff;
 
-/*Card*/
-$card-header-text-color: #000000;
-$card-description-text-color: #000000;
+  /*Card*/
+  --card-header-text-color: #000000;
+  --card-description-text-color: #000000;
 
-/*Footer*/
-$footer-bg-color: #4c626f;
-$footer-text-color: #000000;
+  /*Footer*/
+  --footer-bg-color: #4c626f;
+  --footer-text-color: #000000;
 
-/*Common*/
-$primary-button-color: #96d4cf;
-$secondary-button-color: #b5c4d9;
-$primary-button-text-color: #ffffff;
-$secondary-button-text-color: #000000;
+  /*Common*/
+  --primary-button-color: #96d4cf;
+  --secondary-button-color: #b5c4d9;
+  --primary-button-text-color: #ffffff;
+  --secondary-button-text-color: #000000;
 
-$primary-text-color: #000000;
-$secondary-text-color: #ffffff;
+  --primary-text-color: #000000;
+  --secondary-text-color: #ffffff;
+
+}
